[package]
name = "jlogger"
version = "0.1.0"
authors = ["Seimizu Joukan <saimizi@gmail.com>"]
description = "A simple log utility."
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version="0.4", features=["std"] }
