[package]
name = "jlogger"
version = "0.1.4"
authors = ["Seimizu Joukan <saimizi@gmail.com>"]
description = "A simple log utility."
repository = "https://github.com/saimizi/jlogger.git"
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version="0.4", features=["std"] }
chrono = "0.4"
