[package]
name = "jlogger-tracing"
version = "0.1.0"
authors = ["Seimizu Joukan <saimizi@gmail.com>"]
description = "A simple log utility."
repository = "https://github.com/saimizi/jlogger.git"
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[dev-dependencies]
function_name = "0.3.0"
clap = { version = "4.0.29", features = ["derive"] }
log = { version = "0.4.17", features = ["std"] }
